# yellow-taxi-trip

./: .gitignore  README.md  pyproject.toml
notebooks/: eta.ipynb  model.ipynb
