[tool.poetry]
name = "yellow-taxi-trip"
version = "0.1.0"
description = ""
authors = ["Erikas <ervalinskas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.11"
pandas = "~1.5.2"
catboost = "~1.1.1"
streamlit = "~1.15.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "~3.6.2"
shap = "~0.41"
jupyterlab = "~3.5.1"
scikit-learn = "~1.1.3"
black = "~22.10"
isort = "~5.10.1"
mypy = "~0.991"
pytest = "~7.2"
pytest-cov = "~4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
